Fix background of new modals in homogay
The new modals have a border-radius which conflicted with the background set in `.modal-root__modal`

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/homogay/diff.scss
+++ b/app/javascript/flavours/polyam/styles/homogay/diff.scss
@@ -207,7 +207,7 @@
 }
 
 // general modals
-.modal-root__modal {
+.modal-root__modal:not(.safety-action-modal) {
   background: $ui-base-color;
 }
 
