--- a/app/javascript/flavours/glitch/styles/homogay/variables.scss
+++ b/app/javascript/flavours/glitch/styles/homogay/variables.scss
@@ -84,6 +84,8 @@ $border-radius: 8px;
 // Overrides do not apply without "!important"
 :root {
   --dropdown-background-color: #{$ui-base-lighter-color} !important;
+  --modal-background-color: #{$ui-base-color} !important;
+  --modal-background-variant-color: #{$ui-base-semi-lighter-color} !important;
   --background-border-color: #{lighten($ui-base-color, 12%)} !important;
   --background-color: #{$ui-base-color} !important;
   --background-color-tint: #{$ui-base-color} !important;
