[Polyam] Fix icon and styling in browser notifications banner
Port a583317df62acced3cea1f102e5c7981ff1bdbea to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1282,6 +1282,13 @@ $ui-header-height: 55px;
     color: $darker-text-color;
     margin-bottom: 15px;
     text-align: center;
+
+    // Polyam: Reduced icon size
+    .icon {
+      width: 16px;
+      height: 16px;
+      vertical-align: middle;
+    }
   }
 }
 
