--- a/app/javascript/flavours/polyam/styles/rich_text.scss
+++ b/app/javascript/flavours/polyam/styles/rich_text.scss
@@ -1,5 +1,6 @@
 .status__content__text,
 .e-content,
+.edit-indicator__content,
 .reply-indicator__content {
   pre,
   blockquote {
@@ -105,16 +106,5 @@
   pre code {
     // prevent padding of code tags inside pre
     padding: 0;
-  }
-}
-
-.reply-indicator__content {
-  blockquote {
-    border-inline-start-color: $inverted-text-color;
-    color: $inverted-text-color;
-  }
-
-  code {
-    color: $primary-text-color;
   }
 }
