--- a/app/views/settings/preferences/other/show.html.haml
+++ b/app/views/settings/preferences/other/show.html.haml
@@ -57,6 +57,12 @@
                  item_wrapper_tag: 'li',
                  glitch_only: true
 
+  %h4= t 'notifications.other_settings'
+
+  = f.simple_fields_for :settings, current_user.settings do |ff|
+    .fields-group
+      = ff.input :'web.notification_sound', collection: NotificationSounds.instance.names, label_method: ->(sound) { I18n.t("sounds.#{sound}", default: sound) }, wrapper: :with_label, label: I18n.t('simple_form.labels.defaults.setting_notification_sound'), include_blank: false, polyam_only: true
+
   %h4= t 'preferences.public_timelines'
 
   .fields-group
