Replace `notifications.other_settings` with `preferences.notifications`
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/settings/preferences/other/show.html.haml
+++ b/app/views/settings/preferences/other/show.html.haml
@@ -57,7 +57,7 @@
                  item_wrapper_tag: 'li',
                  glitch_only: true
 
-  %h4= t 'notifications.other_settings'
+  %h4= t 'preferences.notifications'
 
   = f.simple_fields_for :settings, current_user.settings do |ff|
     .fields-group
