Fix misaligned account bio in moderation interface
Caused by adding margin to the component version and it's reused in moderation interface.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/admin.scss
+++ b/app/javascript/flavours/polyam/styles/admin.scss
@@ -992,6 +992,7 @@ a.name-tag,
     box-sizing: border-box;
     padding: 20px;
     color: $primary-text-color;
+    margin: 0; // Polyam: Added margin to component
   }
 }
 
