Add removed `nowrap` to admin interface
The elements display as horizontal instead of vertical columns without it.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/admin.scss
+++ b/app/javascript/flavours/polyam/styles/admin.scss
@@ -983,6 +983,15 @@ a.name-tag,
       border-radius: 0 4px 0 0;
     }
 
+    // Polyam: This was removed in component
+    dt,
+    dd {
+      max-height: 48px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
     .verified a {
       color: $valid-value-color;
     }
