--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -1323,8 +1323,9 @@ img.modal-warning {
 
 .safety-action-modal,
 .interaction-modal {
-  max-width: 90vw;
+  max-width: 100vw;
   width: 600px;
+  overflow-y: auto;
 }
 
 .interaction-modal {
