Update FairyFloss to new monocolor design
Not sure mint as boost icon color still makes sense, but I kept it, because it was there before.

Changed background to a darker variant to make it easier on the eyes.

Adjusted reaction-bar colors for new background.

Simplified modal background overrides.

Color hashtags in hashtag bar same as in toots.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/fairy-floss/variables.scss
+++ b/app/javascript/flavours/polyam/styles/fairy-floss/variables.scss
@@ -108,3 +108,14 @@ $no-gap-breakpoint: 415px;
 $font-sans-serif: 'mastodon-font-sans-serif' !default;
 $font-display: 'mastodon-font-display' !default;
 $font-monospace: 'mastodon-font-monospace' !default;
+
+:root {
+  --dropdown-border-color: #{lighten($purple3, 4%)} !important;
+  --dropdown-background-color: #{$purple3} !important;
+  --modal-background-color: #{lighten($ui-base-color, 8%)} !important;
+  --modal-background-variant-color: #{$ui-base-color} !important;
+  --background-border-color: #{lighten($ui-base-color, 8%)} !important;
+  --background-color: #{darken($ui-base-color, 4%)} !important;
+  --background-color-tint: #{darken($ui-base-color, 4%)} !important;
+  --surface-background-color: #{$purple1} !important;
+}
