--- a/app/javascript/flavours/polyam/styles/mastodon-light/diff.scss
+++ b/app/javascript/flavours/polyam/styles/mastodon-light/diff.scss
@@ -560,10 +560,7 @@ html {
   color: $white;
 }
 
-.compose-form,
-.spoiler-input__input,
-.search__input,
-.search__popout {
+.compose-form .spoiler-input__input {
   color: lighten($ui-highlight-color, 8%);
 }
 
@@ -571,6 +568,8 @@ html {
 .compose-form__highlightable,
 .search__input,
 .search__popout,
+.emoji-mart-search input,
+.language-dropdown__dropdown .emoji-mart-search input,
 .poll__option input[type='text'] {
   background: darken($ui-base-color, 10%);
 }
