Add `nowrap` to table-action-link
This prevents the icon and text from wrapping when part of element with long text.
Specifically the rule page when the rule text or upcoming hint is very long.

This is probably the first `nowrap` that has an actual good reason to be there.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/tables.scss
+++ b/app/javascript/flavours/polyam/styles/tables.scss
@@ -134,6 +134,7 @@ a.table-action-link {
   padding: 0 10px;
   color: $darker-text-color;
   font-weight: 500;
+  white-space: nowrap; // Polyam: Fix display with long text
 
   &:hover {
     color: $primary-text-color;
