Reduce padding of notification request banner
This absolutely looked like shit in the advanced UI.
Re-applied the padding the banner had before the redesign.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -1611,7 +1611,7 @@ $ui-header-height: 55px;
   align-items: center;
   border: 1px solid var(--background-border-color);
   border-top: 0;
-  padding: 24px 32px;
+  padding: 15px; // Polyam: Keep old padding
   gap: 16px;
   color: $darker-text-color;
   text-decoration: none;
