Make default skin a skin
This is in preparation to vanilla's new system theme.

Makes the default theme an actuall theme instead of relying on loading core assets.

Changes some checks for "default" to "system"

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/layouts/_theme.html.haml
+++ b/app/views/layouts/_theme.html.haml
@@ -4,7 +4,7 @@
     - pack_path = theme[:flavour] ? "flavours/#{theme[:flavour]}/#{theme[:pack]}" : "core/#{theme[:pack]}"
     = javascript_pack_tag pack_path, crossorigin: 'anonymous'
     - if theme[:skin]
-      - if !theme[:flavour] || theme[:skin] == 'default'
+      - if !theme[:flavour] || theme[:skin] == 'system'
         = stylesheet_pack_tag pack_path, media: 'all', crossorigin: 'anonymous'
       - else
         = stylesheet_pack_tag "skins/#{theme[:flavour]}/#{theme[:skin]}/#{theme[:pack]}", media: 'all', crossorigin: 'anonymous'
