--- a/app/views/layouts/_theme.html.haml
+++ b/app/views/layouts/_theme.html.haml
@@ -7,6 +7,6 @@
       - if !theme[:flavour] || theme[:skin] == 'default'
         = stylesheet_pack_tag pack_path, media: 'all', crossorigin: 'anonymous'
       - else
-        = stylesheet_pack_tag "skins/#{theme[:flavour]}/#{theme[:skin]}/#{theme[:pack]}", media: 'all', crossorigin: 'anonymous'
+        = theme_style_tags theme
     - theme[:preload]&.each do |link|
       = preload_pack_asset "#{link}.js"
