--- a/app/views/layouts/_theme.html.haml
+++ b/app/views/layouts/_theme.html.haml
@@ -7,6 +7,7 @@
       - if !theme[:flavour] || theme[:skin] == 'default'
         = stylesheet_pack_tag pack_path, media: 'all', crossorigin: 'anonymous'
       - else
+        = theme_color_tags theme
         = theme_style_tags theme
     - theme[:preload]&.each do |link|
       = preload_pack_asset "#{link}.js"
