Add FontAwesome icons to admin/settings views
Lets `material_symbol` return an awesome icon instead of material.

Add helper to replace material names with awesome names.

Adds propshaft config to load Font Awesome icons.

Adds `variant` to some icons

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/reports/_status.html.haml
+++ b/app/views/admin/reports/_status.html.haml
@@ -37,5 +37,5 @@
         = t("statuses.visibilities.#{status.visibility}")
       - if status.proper.sensitive?
         ·
-        = material_symbol('visibility_off')
+        = material_symbol('visibility_off', variant: 'regular')
         = t('stream_entries.sensitive_content')
