Change icon size in admin view to 13px
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/admin.scss
+++ b/app/javascript/flavours/polyam/styles/admin.scss
@@ -10,9 +10,10 @@ $content-width: 840px;
   width: 100%;
   min-height: 100vh;
 
+  // Polyam: smaller icon size compared to upstream
   .icon {
-    width: 16px;
-    height: 16px;
+    width: 13px;
+    height: 13px;
     vertical-align: middle;
     margin: 0 2px;
   }
