[Polyam] Change design of people tab on explore in web UI
Port 0ec061aa8f7383330b26b3323d2fafd9ec7663e3 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -271,29 +271,11 @@ a .account__avatar {
   display: flex;
   align-items: center;
   gap: 8px;
+}
 
-  .icon-button {
-    border: 1px solid var(--background-border-color);
-    border-radius: 4px;
-    box-sizing: content-box;
-    padding: 5px;
-
-    // Polyam: Color active icon-button
-    &.active {
-      border-color: $highlight-text-color;
-
-      &:hover,
-      &:focus,
-      &:active {
-        background-color: rgba($highlight-text-color, 0.15);
-      }
-    }
-
-    .icon {
-      width: 24px;
-      height: 24px;
-    }
-  }
+// Polyam: Split from .explore__suggestions__card
+.account__relationship {
+  @include follow-unfollow-icons;
 }
 
 .account-authorize {
