--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -167,10 +167,11 @@
         content: '';
         position: absolute;
         bottom: -1px;
-        left: 0;
-        width: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 40px;
         height: 3px;
-        border-radius: 4px;
+        border-radius: 4px 4px 0 0;
         background: $highlight-text-color;
       }
     }
@@ -196,6 +197,32 @@
       height: 100%;
       border-inline-start: 4px solid $highlight-text-color;
       pointer-events: none;
+    }
+  }
+}
+
+// Mixin for upstream's .account__relationship, .explore__suggestions__card
+@mixin follow-unfollow-icons {
+  .icon-button {
+    border: 1px solid var(--background-border-color);
+    border-radius: 4px;
+    box-sizing: content-box;
+    padding: 5px;
+
+    // Polyam: Color active icon-button
+    &.active {
+      border-color: $highlight-text-color;
+
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: rgba($highlight-text-color, 0.15);
+      }
+    }
+
+    .icon {
+      width: 24px;
+      height: 24px;
     }
   }
 }
