--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,15 +22,16 @@
 
     %link{ rel: 'mask-icon', href: frontend_asset_path('images/logo-symbol-icon.svg'), color: '#6364FF' }/
     %link{ rel: 'manifest', href: manifest_path(format: :json) }/
+    = theme_color_tags current_theme
     %meta{ name: 'apple-mobile-web-app-capable', content: 'yes' }/
 
     %title= html_title
 
-    = stylesheet_pack_tag 'flavours/vanilla/common', media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
-    = stylesheet_pack_tag current_theme, media: 'all', crossorigin: 'anonymous'
+    = stylesheet_pack_tag "flavours/#{current_flavour}/common", media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
+    = theme_style_tags current_theme
 
     -# Needed for the wicg-inert polyfill. It needs to be on it's own <style> tag, with this `id`
-    = stylesheet_pack_tag 'flavours/vanilla/inert', media: 'all', id: 'inert-style'
+    = stylesheet_pack_tag "flavours/#{current_flavour}/inert", media: 'all', id: 'inert-style'
 
     = javascript_pack_tag 'common', crossorigin: 'anonymous'
     = preload_locale_pack
