--- a/app/views/layouts/embedded.html.haml
+++ b/app/views/layouts/embedded.html.haml
@@ -11,7 +11,7 @@
     - if storage_host?
       %link{ rel: 'dns-prefetch', href: storage_host }/
 
-    = stylesheet_pack_tag 'flavours/vanilla/common', media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
+    = stylesheet_pack_tag "flavours/#{current_flavour}/common", media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
     = theme_style_tags current_theme
     = javascript_pack_tag 'common', integrity: true, crossorigin: 'anonymous'
     = preload_locale_pack
