Drop hardcoded reliance on vanilla flavour
From upstream PR

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/layouts/mailer.html.haml
+++ b/app/views/layouts/mailer.html.haml
@@ -19,7 +19,7 @@
       </o:OfficeDocumentSettings>
       </xml>
     -# Polyam: current_flavour is unavailable in this context
-    = stylesheet_pack_tag "flavours/#{Setting.default_settings['flavour']}/mailer"
+    = stylesheet_pack_tag "flavours/#{Setting.default_settings['flavour'] || 'glitch'}/mailer"
   %body
     .email{ dir: locale_direction }
       %table.email-w-full{ cellspacing: 0, cellpadding: 0, border: 0, role: 'presentation' }
