--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,11 +27,11 @@
 
     %title= html_title
 
-    = stylesheet_pack_tag "flavours/#{current_flavour}/common", media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
+    = flavoured_stylesheet_pack_tag 'common', media: 'all', crossorigin: 'anonymous' # upstream uses `common` but that's implicitly defined
     = theme_style_tags current_theme
 
     -# Needed for the wicg-inert polyfill. It needs to be on it's own <style> tag, with this `id`
-    = stylesheet_pack_tag "flavours/#{current_flavour}/inert", media: 'all', id: 'inert-style'
+    = flavoured_stylesheet_pack_tag 'inert', media: 'all', id: 'inert-style'
 
     = javascript_pack_tag 'common', crossorigin: 'anonymous'
     = preload_locale_pack
