Replace icons in badge component
This component still used Material icons.

Replaced them with FA.

Reduced height of badge icon and added padding to get closer to upstream's design.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/accounts.scss
@@ -229,9 +229,10 @@
 
   svg {
     width: auto;
-    height: 15px;
+    height: 12px; // Polyam: reduced height
     opacity: 0.85;
     fill: currentColor;
+    padding: 2px; // Polyam: added padding
   }
 
   &__domain {
