[WIP] Add and use helper for system skins
Allows system skins to fall back to defaults.

Use configured skins in theme helper.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/settings/appearance/show.html.haml
+++ b/app/views/admin/settings/appearance/show.html.haml
@@ -29,6 +29,7 @@
                 wrapper: :with_label,
                 label: t('admin.settings.system_dark.title'),
                 include_blank: false,
+                selected: system_skins[0],
                 label_method: ->(system_dark) { I18n.t("skins.#{Setting.flavour}.#{system_dark}", default: system_dark) }
 
     .fields-row__column.fields-row__column-6.fields-group
@@ -37,6 +38,7 @@
                 wrapper: :with_label,
                 label: t('admin.settings.system_light.title'),
                 include_blank: false,
+                selected: system_skins[1],
                 label_method: ->(system_light) { I18n.t("skins.#{Setting.flavour}.#{system_light}", default: system_light) }
 
   .fields-group
