Add admin setting to customise dark/light skin in system theme (#545)
* Add setting to customise dark/light skin in system theme

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Change input to list flavour and skin

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Disable unselected flavour group in input

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add and use helper for custom system skins

Add fallback to defaults for configured custom system skins

Adds helper to use custom system skins

Changes `current_theme` to also include custom system skins

Changes in `assets.rake` prevents precompile looking up values in redis, which breaks specs.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add hint to setting

Clarify these are for system skin

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Reset selected skins on flavour change

Resets the selected skins to defaults when not available in selected flavour.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Change hint to include note that selected skins apply to all flavours

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add polyam label to settings

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+pol

--- a/app/views/admin/settings/appearance/show.html.haml
+++ b/app/views/admin/settings/appearance/show.html.haml
@@ -22,6 +22,35 @@
               value_method: ->(value) { value.join('/') },
               group_method: :last
 
+  .fields-row
+    .fields-row__column.fields-row__column-6.fields-group
+      = f.input :system_dark,
+                collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
+                group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
+                wrapper: :with_block_label,
+                label: t('admin.settings.system_dark.title'),
+                hint: t('admin.settings.system_dark.desc_html'),
+                include_blank: false,
+                as: :grouped_select,
+                value_method: ->(value) { value[1] },
+                label_method: ->(flavour_and_skin) { I18n.t("skins.#{flavour_and_skin.join('.')}", default: flavour_and_skin[1]) },
+                group_method: :last,
+                polyam_only: true
+
+    .fields-row__column.fields-row__column-6.fields-group
+      = f.input :system_light,
+                collection: Themes.instance.flavours_and_skins.each { |(_, fsa)| fsa.delete_if { |fs| fs[1] == 'system' } },
+                group_label_method: ->(flavour_and_skin) { I18n.t("flavours.#{flavour_and_skin[0]}.name", default: flavour_and_skin) },
+                wrapper: :with_block_label,
+                label: t('admin.settings.system_light.title'),
+                hint: t('admin.settings.system_light.desc_html'),
+                include_blank: false,
+                as: :grouped_select,
+                value_method: ->(value) { value[1] },
+                label_method: ->(flavour_and_skin) { I18n.t("skins.#{flavour_and_skin.join('.')}", default: flavour_and_skin[1]) },
+                group_method: :last,
+                polyam_only: true
+
   .fields-group
     = f.input :custom_css,
               as: :text,
