[Polyam] Fix incorrect element selector from #30221
Port 94493cff925ee9b9cb4ebc7cc20081ab20521b85 to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -779,10 +779,6 @@ $ui-header-logo-wordmark-width: 99px;
     outline: $ui-button-focus-outline;
   }
 
-  .no-reduce-motion .icon {
-    transition: transform 0.15s ease-in-out;
-  }
-
   &.active {
     color: $primary-text-color;
 
@@ -804,6 +800,10 @@ $ui-header-logo-wordmark-width: 99px;
     color: $dark-text-color;
     cursor: default;
   }
+}
+
+.no-reduce-motion .column-header__button .icon {
+  transition: transform 150ms ease-in-out;
 }
 
 .column-header__notif-cleaning-buttons {
