[Polyam] Fix announcements icon rotating like settings one
Port cd0c5479362260082dbe1cbc42e364017853bbfc to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -786,7 +786,7 @@ $ui-header-logo-wordmark-width: 99px;
       color: $primary-text-color;
     }
 
-    .icon {
+    .icon-sliders {
       transform: rotate(60deg);
     }
   }
@@ -802,7 +802,7 @@ $ui-header-logo-wordmark-width: 99px;
   }
 }
 
-.no-reduce-motion .column-header__button .icon {
+.no-reduce-motion .column-header__button .icon-sliders {
   transition: transform 150ms ease-in-out;
 }
 
