Add basic fediversary banner to account page
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -469,6 +469,7 @@ a.account__display-name {
   @include filter-bar;
 }
 
+.account-anniversary-banner,
 .moved-account-banner,
 .follow-request-banner,
 .account-memorial-banner {
@@ -506,6 +507,7 @@ a.account__display-name {
   width: 100%;
 }
 
+.account-anniversary-banner__message,
 .account-memorial-banner__message {
   margin-bottom: 0;
 }
