Add fediversary banner (#576)
* Add `anniversary` attribute to account

Adds a new boolean attribute which clients can use to determine whether it's the user's anniversary or not without having to calculate themselves.

This is to use server time (UTC) to prevent users from accidentally leaking their timezone.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add basic fediversary banner to account page

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add translations

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Add animation

Adds an animation of falling fediverse logos to the banner.

Initially the animation was supposed to run on the whole account header, but this didn't work reliably.

`z-index` is used to fade the animation in and out of the banner.

I'm not too happy about the naming, but I wanted it to have a unique name to not collide with upstream.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Don't show banner on memorialized accounts

Feels a bit bad taste to show it on memorialized accounts.

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

---------

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -469,6 +469,7 @@ a.account__display-name {
   @include filter-bar;
 }
 
+.account-anniversary-banner,
 .moved-account-banner,
 .follow-request-banner,
 .account-memorial-banner {
@@ -506,8 +507,14 @@ a.account__display-name {
   width: 100%;
 }
 
+.account-anniversary-banner__message,
 .account-memorial-banner__message {
   margin-bottom: 0;
+}
+
+.account-anniversary-banner {
+  position: relative;
+  z-index: -2;
 }
 
 .account__header__content {
@@ -878,5 +885,46 @@ a.account__display-name {
   .icon {
     width: 13px;
     height: 13px;
+  }
+}
+
+// Polyam: Animation for anniversary-note
+@keyframes fall {
+  0% {
+    transform: translateY(-220%) rotate(0);
+  }
+
+  100% {
+    transform: translateY(220%) rotate(180deg);
+  }
+}
+
+.no-reduce-motion {
+  .fedimation {
+    .fedi-logo {
+      animation: fall 5s linear infinite;
+
+      &:nth-child(even) {
+        animation-delay: 2.5s;
+      }
+    }
+  }
+}
+
+.fedimation {
+  display: flex;
+  justify-content: space-between;
+  user-select: none;
+  pointer-events: none;
+  z-index: -1;
+  width: 100%;
+  height: 0;
+
+  .fedi-logo {
+    width: 18px;
+    height: 18px;
+    background-image: url('~flavours/polyam/images/fediverse.svg');
+    background-size: contain;
+    transform: translateY(-220%);
   }
 }
